test/sema/typeck/literal/int64-limit-overflow.out
error: number exceeds maximum value.
--> int64-limit-overflow.dora:1:19
 | fn f() { let _x = 922337203685477580800000i64; }
                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~
 | 
1 error found.
