test/sema/typeck/literal/int64-limit-overflow.dora
fn f() { let _x = 922337203685477580800000i64; }
